# laboratorio_programmazione

./: CMakeLists.txt  main.cpp
src/: observer.h  resource_loader.cpp  resource_loader.h
tests/: resource_loader_test.cpp
